--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body{
     grid-template-columns: 15vw 70vw 15vw;
 /*     https://en.wikipedia.org/wiki/Canc%C3%BAn#/media/File:Cancun_Strand_Luftbild_(22143397586).jpg */
 /*     background-image: url(img/stars-1436950_1280.jpg) */
-    background-image: url(https://en.wikipedia.org/wiki/Canc%C3%BAn#/media/File:Cancun_Strand_Luftbild_(22143397586).jpg)
+    background-image: url(img/1280px-Cancun_Strand_Luftbild_(22143397586).jpg)
 }
 
 section.data{
